# enka-substat-exporter

./: Cargo.toml  build.rs  flake.nix  output.txt  readme.md  src.rs  update_local_data.sh  usage.md
resources/: CharacterUsefulRollMap.csv  TextMapEN.json
src/: api.rs  datamine.rs  main.rs  rolls.rs  stats.rs
src/stats/: rolls.rs
