[package]
name = "enka-substat-exporter"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [lints.rust]
# non_ascii_idents = "forbid"
# unsafe_code = "forbid"
# future_incompatible = { level = "warn", priority = -1 }
# let_underscore_drop = "warn"
# nonstandard_style = { level = "warn", priority = -1 }
# single_use_lifetimes = "warn"
# trivial_numeric_casts = "warn"
# unused_import_braces = "warn"
# unused_lifetimes = "warn"
# unused_qualifications = "warn"
# unused_results = "warn"
#
# [lints.clippy]
# infinite_loop = "deny"                       # should be a native compilation error, cannot `forbid` due to leptos component macro
# mod_module_files = "deny"
# tests_outside_test_module = "deny"
# absolute_paths = "warn"
# as_conversions = "warn"
# as_underscore = "warn"
# clone_on_ref_ptr = "warn"
# empty_drop = "warn"
# empty_enum_variants_with_brackets = "warn"
# empty_structs_with_brackets = "warn"
# error_impl_error = "warn"
# format_push_string = "warn"
# if_then_some_else_none = "warn"
# impl_trait_in_params = "warn"
# nursery = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# redundant_type_annotations = "warn"
# ref_patterns = "warn"
# str_to_string = "warn"
# string_add = "warn"
# string_to_string = "warn"
# unseparated_literal_suffix = "warn"
# unwrap_in_result = "warn"
# unwrap_used = "warn"
# wildcard_enum_match_arm = "warn"
# must_use_candidate = "allow"
